k8s/deployment-http-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-foo
spec:
  selector:
    matchLabels:
      app: http-echo
      appArgs: foo
  replicas: 2
  template:
    metadata:
      labels:
        app: http-echo
        appArgs: foo
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:0.2.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        args:
        - "-text=foo!"
        - "-listen=:5000"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-bar
spec:
  selector:
    matchLabels:
      app: http-echo
      appArgs: bar
  replicas: 2
  template:
    metadata:
      labels:
        app: http-echo
        appArgs: bar
    spec:
      containers:
      - name: http-echo
        image: hashicorp/http-echo:0.2.3
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
        args:
        - "-text=bar!"
        - "-listen=:5000"
