k8s/loadbalancer.foo.yaml
kind: Service
apiVersion: v1
metadata:
  name: foo-service-lb
spec:
  type: LoadBalancer
  selector:
    app: foo
  ports:
  - port: 5678
    targetPort: 5000
